Bug 341768 - bluedevil ,unactivated, does not stay hidden
Summary: bluedevil ,unactivated, does not stay hidden
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth-systray (other bugs)
Version First Reported In: 2.0.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-11 10:18 UTC by Philippe ROUBACH
Modified: 2014-12-14 10:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Don't set monolithic state to active in constructor (390 bytes, patch)
2014-12-13 10:56 UTC, David Rosca
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2014-12-11 10:18:18 UTC
opensuse 13.1 x86_64 , kde 4.14.3
bluedevil 2.0-23.1
bluez 5.8-3.9.1
libbluedevil2 2.0-39.1
libbluetooth3 5.8-3.9.1

i unactivate bluedevil
then
bluedevil disappears from systray . it is hidden.
then
i close the kde session
then
i reopen the kde session (same user)
then
bludevil is still unactivated but not hidden

i must activate then unactivate bluedevil according to hide bluedevil


Reproducible: Always
Comment 1 David Rosca 2014-12-13 07:49:31 UTC
So the issue is that the Bluetooth icon in systray (bluedevil-monolithic) is not hidden, correct?
Just to make sure, can you please check if you have Bluetooth visibility to Auto in System Tray Setings -> Entries?
Comment 2 Philippe ROUBACH 2014-12-13 08:11:03 UTC
(In reply to David Rosca from comment #1)
> So the issue is that the Bluetooth icon in systray (bluedevil-monolithic) is
> not hidden, correct?
accurately does not stay hidden from one kde session to another one

> Just to make sure, can you please check if you have Bluetooth visibility to
> Auto in System Tray Setings -> Entries?
yes "bluetooth visibility" = "auto"
Comment 3 David Rosca 2014-12-13 10:56:19 UTC
Created attachment 89953 [details]
Don't set monolithic state to active in constructor

Can you please try this patch?
Comment 4 David Rosca 2014-12-14 10:06:22 UTC
The patch actually does not work. I have a correct fix and will push it now.
Comment 5 David Rosca 2014-12-14 10:15:26 UTC
Git commit eedc8f34edbe6d02f6587532b40c352bded08259 by David Rosca.
Committed on 14/12/2014 at 10:03.
Pushed by drosca into branch 'master'.

Monolithic: Don't go online on startup when there is no usable adapter

Fix issue with Bluetooth icon visible in systray when Bluetooth is
offline (no usable adapter).

M  +1    -2    src/monolithic/monolithic.cpp

http://commits.kde.org/bluedevil/eedc8f34edbe6d02f6587532b40c352bded08259
Comment 6 Philippe ROUBACH 2014-12-14 10:50:23 UTC
>> Monolithic: Don't go online on startup when there is no usable adapter

but there is a usable adapter and i want to activate it only when i need bluetooth. this is why i unactivate bluedevil.


thanks
Comment 7 David Rosca 2014-12-14 10:52:37 UTC
The Bluetooth icon will still be in system tray, but it will be in passive state - eg. it will be displayed when you click on "Show hidden icons".