Monolithic: Don't go online on startup when there is no usable adapter

Fix issue with Bluetooth icon visible in systray when Bluetooth is
offline (no usable adapter).

BUG: 341768